# serializer version: 1
# name: TestTorchAlgosGPU.test_reproducibility[gpu-stable_learning_control.algos.pytorch.lac.lac]
  ReplayBuffer(
    act_buf=array([[-0.74566746],
         [ 0.24748509],
         [ 0.9945332 ],
         ...,
         [ 0.        ],
         [ 0.        ],
         [ 0.        ]], dtype=float32),
    device=device(type='cuda'),
    done_buf=array([0., 0., 0., ..., 0., 0., 0.], dtype=float32),
    obs_buf=array([[ 0.6520163 ,  0.758205  , -0.46042657],
         [ 0.6521536 ,  0.75808686, -0.00362296],
         [ 0.6290407 ,  0.77737236,  0.60206497],
         ...,
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ]], dtype=float32),
    obs_next_buf=array([[ 0.6521536 ,  0.75808686, -0.00362296],
         [ 0.6290407 ,  0.77737236,  0.60206497],
         [ 0.5758184 ,  0.8175776 ,  1.3342742 ],
         ...,
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ]], dtype=float32),
    ptr=800,
    rew_buf=array([-0.76231134, -0.74030685, -0.830188  , ...,  0.        ,
          0.        ,  0.        ], dtype=float32),
    size=800,
  )
# ---
# name: TestTorchAlgosGPU.test_reproducibility[gpu-stable_learning_control.algos.pytorch.lac.lac].1
  -0.9092484712600708
# ---
# name: TestTorchAlgosGPU.test_reproducibility[gpu-stable_learning_control.algos.pytorch.lac.lac].2
  0.09693808853626251
# ---
# name: TestTorchAlgosGPU.test_reproducibility[gpu-stable_learning_control.algos.pytorch.lac.lac].3
  0.9350979924201965
# ---
# name: TestTorchAlgosGPU.test_reproducibility[gpu-stable_learning_control.algos.pytorch.lac.lac].4
  0.6688002347946167
# ---
# name: TestTorchAlgosGPU.test_reproducibility[gpu-stable_learning_control.algos.pytorch.lac.lac].5
  0.7114517688751221
# ---
# name: TestTorchAlgosGPU.test_reproducibility[gpu-stable_learning_control.algos.pytorch.latc.latc]
  ReplayBuffer(
    act_buf=array([[-0.74566746],
         [ 0.24748509],
         [ 0.9945332 ],
         ...,
         [ 0.        ],
         [ 0.        ],
         [ 0.        ]], dtype=float32),
    device=device(type='cuda'),
    done_buf=array([0., 0., 0., ..., 0., 0., 0.], dtype=float32),
    obs_buf=array([[ 0.6520163 ,  0.758205  , -0.46042657],
         [ 0.6521536 ,  0.75808686, -0.00362296],
         [ 0.6290407 ,  0.77737236,  0.60206497],
         ...,
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ]], dtype=float32),
    obs_next_buf=array([[ 0.6521536 ,  0.75808686, -0.00362296],
         [ 0.6290407 ,  0.77737236,  0.60206497],
         [ 0.5758184 ,  0.8175776 ,  1.3342742 ],
         ...,
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ]], dtype=float32),
    ptr=800,
    rew_buf=array([-0.76231134, -0.74030685, -0.830188  , ...,  0.        ,
          0.        ,  0.        ], dtype=float32),
    size=800,
  )
# ---
# name: TestTorchAlgosGPU.test_reproducibility[gpu-stable_learning_control.algos.pytorch.latc.latc].1
  -0.9157431125640869
# ---
# name: TestTorchAlgosGPU.test_reproducibility[gpu-stable_learning_control.algos.pytorch.latc.latc].2
  0.004099182318896055
# ---
# name: TestTorchAlgosGPU.test_reproducibility[gpu-stable_learning_control.algos.pytorch.latc.latc].3
  0.9295563101768494
# ---
# name: TestTorchAlgosGPU.test_reproducibility[gpu-stable_learning_control.algos.pytorch.latc.latc].4
  0.6035324335098267
# ---
# name: TestTorchAlgosGPU.test_reproducibility[gpu-stable_learning_control.algos.pytorch.latc.latc].5
  0.6853315234184265
# ---
# name: TestTorchAlgosGPU.test_reproducibility[gpu-stable_learning_control.algos.pytorch.sac.sac]
  ReplayBuffer(
    act_buf=array([[-0.7028879 ],
         [ 0.21596181],
         [ 0.9884638 ],
         ...,
         [ 0.        ],
         [ 0.        ],
         [ 0.        ]], dtype=float32),
    device=device(type='cuda'),
    done_buf=array([0., 0., 0., ..., 0., 0., 0.], dtype=float32),
    obs_buf=array([[ 0.6520163 ,  0.758205  , -0.46042657],
         [ 0.65191036,  0.7582961 ,  0.00279398],
         [ 0.6287195 ,  0.7776322 ,  0.60391027],
         ...,
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ]], dtype=float32),
    obs_next_buf=array([[0.65191036, 0.7582961 , 0.00279398],
         [0.6287195 , 0.7776322 , 0.60391027],
         [0.57543445, 0.8178479 , 1.335404  ],
         ...,
         [0.        , 0.        , 0.        ],
         [0.        , 0.        , 0.        ],
         [0.        , 0.        , 0.        ]], dtype=float32),
    ptr=800,
    rew_buf=array([-0.76224935, -0.74084395, -0.8311344 , ...,  0.        ,
          0.        ,  0.        ], dtype=float32),
    size=800,
  )
# ---
# name: TestTorchAlgosGPU.test_reproducibility[gpu-stable_learning_control.algos.pytorch.sac.sac].1
  -0.3256748914718628
# ---
# name: TestTorchAlgosGPU.test_reproducibility[gpu-stable_learning_control.algos.pytorch.sac.sac].2
  -0.8274257183074951
# ---
# name: TestTorchAlgosGPU.test_reproducibility[gpu-stable_learning_control.algos.pytorch.sac.sac].3
  0.28358280658721924
# ---
# name: TestTorchAlgosGPU.test_reproducibility[gpu-stable_learning_control.algos.pytorch.sac.sac].4
  -0.7462182641029358
# ---
# name: TestTorchAlgosGPU.test_reproducibility[gpu-stable_learning_control.algos.pytorch.sac.sac].5
  -0.8998982906341553
# ---
